--- a/core/templates/core/roomlist.html
+++ b/core/templates/core/roomlist.html
@@ -6,14 +6,15 @@
         <div class="row">
             <div class="col-md-3 sidebar">
                 <h4 class="fw-bold">Search</h4>
-                <form action="">
-                    <input type="text" class="form-control mb-2" placeholder="Search by name">
-                    <input type="number" class="form-control mb-2" placeholder="Min Price" min="0">
-                    <input type="number" class="form-control mb-2" placeholder="Max Price" min="0">
-                    <select class="form-select mb-2">
+                <form action="{% url 'roomlist' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="text" class="form-control mb-2" name="searched_room_name" placeholder="Search by name">
+                    <input type="number" class="form-control mb-2" name="min-price" placeholder="Min Price" min="0">
+                    <input type="number" class="form-control mb-2" name="max-price" placeholder="Max Price" min="0">
+                    <select name="searched_city" class="form-select mb-2">
                         <option value="">Select City</option>
                         {% for city in cities %}
-                        <option value="New York">{{city.city}}</option>
+                        <option value="{{ city.id }}">{{city.city}}</option>
                         {% endfor %}
                     </select>
                     <button type="submit" class="btn btn-roomlist-sidebar w-100 fw-bold">Search</button>
