--- a/core/templates/core/roomdetail.html
+++ b/core/templates/core/roomdetail.html
@@ -41,9 +41,9 @@
 
                         <!-- Book Now Button -->
                         <div class="btns d-flex flex-wrap gap-3 p-3">
-                            <button class="room-detail-btn w-100 w-md-50 py-2 fs-5 fw-semibold">
+                            <a href="" class="room-detail-btn w-100 w-md-50 py-2 fs-5 text-center text-decoration-none fw-semibold">
                                 <i class="fas fa-calendar-check me-2"></i>Chat with Seller
-                            </button>
+                            </a>
                             <button class="room-detail-btn w-100 w-md-50 py-2 fs-5 fw-semibold" data-bs-toggle="modal" data-bs-target="#appointmentModal">
                                 <i class="fas fa-calendar-check me-2"></i>Book Appoinment
                             </button>
