--- a/accounts/templates/registration/customer_registration.html
+++ b/accounts/templates/registration/customer_registration.html
@@ -87,14 +87,20 @@
                                     </select>
                                 </div>
                                 
-                                <div class="col-md-6 mb-3">
+                                <div class="col-md-6 mb-3 position-relative">
                                     <label for="password" class="form-label fw-medium">Password</label>
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="Create password" required>
+                                    <input type="password" class="form-control pe-5" name="password" id="password" placeholder="Create password" required>
+                                    <span class="position-absolute top-50 end-0 mt-3 translate-middle-y me-4" style="cursor: pointer;" id="togglePassword">
+                                        <i class="fas fa-eye-slash"></i>
+                                    </span>
                                 </div>
                                 
-                                <div class="col-md-6 mb-4">
+                                <div class="col-md-6 mb-4 position-relative">
                                     <label for="confirm_password" class="form-label fw-medium">Confirm Password</label>
-                                    <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="Confirm password" required>
+                                    <input type="password" class="form-control pe-5" name="confirm_password" id="confirm_password" placeholder="Confirm password" required>
+                                    <span class="position-absolute top-50 mt-3 end-0 translate-middle-y me-4" style="cursor: pointer;" id="toggleConfirmPassword">
+                                        <i class="fas fa-eye-slash"></i>
+                                    </span>
                                 </div>
                                 
                                 <div class="col-12 mb-3">
@@ -117,6 +123,7 @@
         </div>
     </div>
 
+    <script src="{% static 'js/eye.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
