--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -62,9 +62,12 @@
                                 <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email" required>
                             </div>
                             
-                            <div class="mb-3">
+                            <div class="mb-3 position-relative">
                                 <label for="password" class="form-label fw-medium">Password</label>
-                                <input type="password" class="form-control" name="password" id="password" placeholder="Enter your password" required>
+                                <input type="password" class="form-control pe-5" name="password" id="password" placeholder="Enter your password" required>
+                                <span class="position-absolute top-50 end-0 translate-middle-y me-3" style="cursor: pointer;" id="togglePassword">
+                                    <i class="fas fa-eye-slash"></i>
+                                </span>
                                 <div class="text-end mt-2">
                                     <a href="{% url 'password_reset' %}" class="text-decoration-none theme-text">Forgot password?</a>
                                 </div>
@@ -87,6 +90,7 @@
         </div>
     </div>
 
+    <script src="{% static 'js/eye.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
